force-app/main/default/objects/Sales_Target__c/Sales_Target__c.object-meta.xml
<CustomObject>
    <label>Sales Target</label>
    <nameField>
        <displayFormat>TGT-{000000}</displayFormat>
        <label>Target Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>