force-app/main/default/objects/Sales_Target__c/fields/Achieved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Realized sales value from invoiced orders</description>
    <label>Achieved Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>