force-app/main/default/objects/Sales_Target__c/fields/Achievement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Percentage__c</fullName>
    <description>Real-time realization percentage</description>
    <formula>IF(Target_Amount__c &gt; 0, Achieved_Amount__c / Target_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achievement (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>