force-app/main/default/objects/Sales_Target__c/fields/Medical_Representative__c.field-meta.xml
<CustomField>
    <fullName>Medical_Representative__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Target owner</description>
    <label>Medical Representative</label>
    <referenceTo>Medical_Representative__c</referenceTo>
    <relationshipLabel>Sales Targets</relationshipLabel>
    <relationshipName>Sales_Targets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>