force-app/main/default/objects/Sales_Target__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Applicable sales territory</description>
    <label>Territory</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>